--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -632,6 +632,7 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 	# Gameboy / Gameboy Color
 	select BR2_PACKAGE_LIBRETRO_GAMBATTE        # ALL
 	select BR2_PACKAGE_LIBRETRO_TGBDUAL         # ALL
+	select BR2_PACKAGE_LIBRETRO_SAMEBOY         # ALL	
 
 	# GBA
 	select BR2_PACKAGE_LIBRETRO_MGBA            # ALL
