--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -663,6 +663,7 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 
 	# Neo Geo Pocket
 	select BR2_PACKAGE_LIBRETRO_BEETLE_NGP      # ALL
+	select BR2_PACKAGE_LIBRETRO_RACE		    # ALL	
 
 	# Atari Lynx
 	select BR2_PACKAGE_LIBRETRO_BEETLE_LYNX     # ALL
