use libretro-core-info

--- a/package/batocera/emulators/retroarch/retroarch/Config.in
+++ b/package/batocera/emulators/retroarch/retroarch/Config.in
@@ -3,6 +3,7 @@ config BR2_PACKAGE_RETROARCH
 	select dejavu
 	select BR2_PACKAGE_RETROARCH_ASSETS
 	select BR2_PACKAGE_FLAC
+	select BR2_PACKAGE_LIBRETRO_CORE_INFO
         bool "Retroarch"
         help
           A multi emulator frontend.
