--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -632,7 +632,7 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 	# Gameboy / Gameboy Color
 	select BR2_PACKAGE_LIBRETRO_GAMBATTE        # ALL
 	select BR2_PACKAGE_LIBRETRO_TGBDUAL         # ALL
-	select BR2_PACKAGE_LIBRETRO_SAMEBOY         # ALL	
+	select BR2_PACKAGE_LIBRETRO_SAMEBOY         # ALL
 
 	# GBA
 	select BR2_PACKAGE_LIBRETRO_MGBA            # ALL
@@ -663,7 +663,7 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 
 	# Neo Geo Pocket
 	select BR2_PACKAGE_LIBRETRO_BEETLE_NGP      # ALL
-	select BR2_PACKAGE_LIBRETRO_RACE		    # ALL	
+	select BR2_PACKAGE_LIBRETRO_RACE		    # ALL
 
 	# Atari Lynx
 	select BR2_PACKAGE_LIBRETRO_BEETLE_LYNX     # ALL
@@ -1094,6 +1094,9 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	select BR2_PACKAGE_LIBRETRO_STELLA              # ALL
     select BR2_PACKAGE_LIBRETRO_STELLA2014          if BR2_PACKAGE_BATOCERA_TARGET_RPI1
 
+	# Atari 5200
+	select BR2_PACKAGE_LIBRETRO_A5200               # ALL
+
 	# NEC PC-Engine / TurboGrafx / SuperGrafx range
 	select BR2_PACKAGE_LIBRETRO_BEETLE_PCE          if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
 	select BR2_PACKAGE_LIBRETRO_BEETLE_PCE_FAST     # ALL
@@ -1112,7 +1115,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	select BR2_PACKAGE_LIBRETRO_FCEUMM              # ALL
 	select BR2_PACKAGE_LIBRETRO_NESTOPIA            # ALL
 	select BR2_PACKAGE_LIBRETRO_MESEN               # ALL
-	select BR2_PACKAGE_LIBRETRO_QUICKNES            # ALL	
+	select BR2_PACKAGE_LIBRETRO_QUICKNES            # ALL
 
 	# Super Nintendo / Super Famicom
 	select BR2_PACKAGE_LIBRETRO_SNES9X              if !BR2_PACKAGE_BATOCERA_TARGET_RPI1
