Update rpi4 defaults

--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-piboy4.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-piboy4.yml
@@ -24,16 +24,10 @@ wii:
   core:     dolphin
 
 # mess
-lcdgames:
+plugnplay:
   emulator: mame
   core:     mame
-cdi:
-  emulator: mame
-  core:     mame
-advision:
-  emulator: mame
-  core:     mame
-tvgames:
+megaduck:
   emulator: mame
   core:     mame
 pv1000:
@@ -79,5 +73,35 @@ tutor:
   emulator: mame
   core:     mame
 coco:
+  emulator: mame
+  core:     mame
+macintosh:
+  emulator: mame
+  core:     mame
+archimedes:
+  emulator: mame
+  core:     mame
+socrates:
+  emulator: mame
+  core:     mame
+supracan:
+  emulator: mame
+  core:     mame
+vsmile:
+  emulator: mame
+  core:     mame
+xegs:
+  emulator: mame
+  core:     mame
+atom:
+  emulator: mame
+  core:     mame
+electron:
+  emulator: mame
+  core:     mame
+camplynx:
+  emulator: mame
+  core:     mame
+vgmplay:
   emulator: mame
   core:     mame
