--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-piboy4.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-piboy4.yml
@@ -24,6 +24,15 @@ wii:
   core:     dolphin
 
 # mess
+lcdgames:
+  emulator: mame
+  core:     mame
+cdi:
+  emulator: mame
+  core:     mame
+advision:
+  emulator: mame
+  core:     mame
 plugnplay:
   emulator: mame
   core:     mame
