inital checkin of srb2

--- a/Config.in
+++ b/Config.in
@@ -147,6 +147,7 @@ menu "Ports"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake2/xatrix/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake3/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/rtcw/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/srb2/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/sdlpop/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/sonic2013/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/soniccd/Config.in"
@@ -442,6 +443,7 @@ menu "Libraries"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/libraries/freepats/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/libraries/libcapsimage/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/libraries/libenet/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/libraries/libgme/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/libraries/libtre/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/libraries/libxmp/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/libraries/python3-pyparsing/Config.in"
