--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1142,6 +1142,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	# Sonic Retro Engine
 	select BR2_PACKAGE_SONIC2013                    # ALL
 	select BR2_PACKAGE_SONICCD                      # ALL
+	select BR2_PACKAGE_SRB2                         # ALL
 
 	# Super Cassette Vision
 	select BR2_PACKAGE_LIBRETRO_EMUSCV              # ALL
