add Sonic Robo Blast 2

--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -506,6 +506,9 @@ sorr:
 spacecadetpinball:
   emulator: spacecadetpinball
   core:     spacecadetpinball
+srb2:
+  emulator: srb2
+  core:     srb2
 steam:
   emulator: steam
   core:     steam
