--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -622,6 +622,9 @@ config BR2_PACKAGE_BATOCERA_ARCADE_SYSTEMS
 	#MESS
     #select BR2_PACKAGE_LIBRETRO_MESS                if  BR2_PACKAGE_BATOCERA_TARGET_X86_64	|| BR2_PACKAGE_BATOCERA_TARGET_RPI4
 
+	#RAINE
+    select BR2_PACKAGE_RAINE                        if  BR2_PACKAGE_BATOCERA_TARGET_X86_64	|| BR2_PACKAGE_BATOCERA_TARGET_RPI4
+
 	help
 		Arcade cores/emulators
 
