--- a/package/batocera/emulationstation/batocera-emulationstation/controllers/es_input.cfg
+++ b/package/batocera/emulationstation/batocera-emulationstation/controllers/es_input.cfg
@@ -2787,6 +2787,29 @@
 		<input name="x" type="button" id="1" value="1" code="304" />
 		<input name="y" type="button" id="5" value="1" code="310" />
 	</inputConfig>
+	<inputConfig type="joystick" deviceName="Nintendo Switch Pro Controller" deviceGUID="030000007e0500000920000000006800">
+		<input name="a" type="button" id="0" value="1" code="304" />
+		<input name="b" type="button" id="1" value="1" code="305" />
+		<input name="down" type="button" id="12" value="1" />
+		<input name="hotkey" type="button" id="15" value="1" />
+		<input name="joystick1left" type="axis" id="0" value="-1" code="0" />
+		<input name="joystick1up" type="axis" id="1" value="-1" code="1" />
+		<input name="joystick2left" type="axis" id="2" value="-1" />
+		<input name="joystick2up" type="axis" id="3" value="-1" />
+		<input name="l2" type="axis" id="4" value="1" />
+		<input name="l3" type="button" id="7" value="1" code="311" />
+		<input name="left" type="button" id="13" value="1" />
+		<input name="pagedown" type="button" id="10" value="1" code="317" />
+		<input name="pageup" type="button" id="9" value="1" code="315" />
+		<input name="r2" type="axis" id="5" value="1" />
+		<input name="r3" type="button" id="8" value="1" code="314" />
+		<input name="right" type="button" id="14" value="1" />
+		<input name="select" type="button" id="4" value="1" code="308" />
+		<input name="start" type="button" id="6" value="1" code="310" />
+		<input name="up" type="button" id="11" value="1" />
+		<input name="x" type="button" id="2" value="1" code="306" />
+		<input name="y" type="button" id="3" value="1" code="307" />
+	</inputConfig>
 	<inputConfig type="joystick" deviceName="PDP CO.,LTD. Faceoff Wired Pro Controller for Nintendo Switch" deviceGUID="030000006f0e00008001000011010000">
 		<input name="a" type="button" id="2" value="1" code="306" />
 		<input name="b" type="button" id="1" value="1" code="305" />
