--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -770,6 +770,9 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 	#Super Flappy Birds
 	select BR2_PACKAGE_LIBRETRO_SUPERFLAPPYBIRDS if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
+	#Super Bros War
+	select BR2_PACKAGE_LIBRETRO_SUPERBROSWAR    if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
+
 	#Zelda Classic
 	select BR2_PACKAGE_LIBRETRO_ZC210 			if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
