--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -579,6 +579,9 @@ sufami:
 supracan:
   emulator: libretro
   core:     mess
+superbroswar:
+  emulator: libretro
+  core:     superbroswar
 snes:
   emulator: libretro
   core:     snes9x
