--- a/Config.in
+++ b/Config.in
@@ -115,6 +115,7 @@ menu "Ports"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/avp/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/awgl/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/bermuda/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/blues/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/box64/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/broguece/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/bstone/Config.in"
