--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-piboy4.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-piboy4.yml
@@ -10,6 +10,9 @@ default:
 nds:
   emulator: drastic
   core:     drastic
+flash:
+  emulator: lightspark
+  core:     lightspark
 psp:
   options:
     frameskip: automatic
