add lzdoom (wip)

--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -744,6 +744,7 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 	# PrBoom (Doom)
 	select BR2_PACKAGE_LIBRETRO_PRBOOM          if  !BR2_PACKAGE_BATOCERA_TARGET_CHA
 	select BR2_PACKAGE_GZDOOM                   if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
+	select BR2_PACKAGE_LZDOOM                   if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
 	# TyrQuake (Quake 1)
 	select BR2_PACKAGE_LIBRETRO_TYRQUAKE        if  !BR2_PACKAGE_BATOCERA_TARGET_RPI1 && !BR2_PACKAGE_BATOCERA_TARGET_RPIZERO2 && !BR2_PACKAGE_BATOCERA_TARGET_CHA
