--- a/configs/batocera-aarch32-subsystem_defconfig
+++ b/configs/batocera-aarch32-subsystem_defconfig
@@ -31,7 +31,7 @@ BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_15=y
 # Kernel
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
-BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,raspberrypi,linux,60652604154e70aeac81fb6155fd9d15dc39daaf)/60652604154e70aeac81fb6155fd9d15dc39daaf.tar.gz"
+BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,raspberrypi,linux,cad0c67b64bb9de6bc970c0a7afbccabec0fcf9d)/cad0c67b64bb9de6bc970c0a7afbccabec0fcf9d.tar.gz"
 BR2_LINUX_KERNEL_DEFCONFIG="bcmrpi3"
 BR2_LINUX_KERNEL_PATCH="$(BR2_EXTERNAL_BATOCERA_PATH)/board/batocera/raspberrypi/linux_patches"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_BATOCERA_PATH)/board/batocera/raspberrypi/linux-defconfig-fragment.config"
@@ -49,6 +49,7 @@ BR2_PACKAGE_DBUS=y
 BR2_PACKAGE_DROIDPORTS=y
 BR2_PACKAGE_BENNUGD_BGDC=y
 BR2_PACKAGE_BENNUGD_BGDI=y
+BR2_PACKAGE_BOX86=y
 BR2_PACKAGE_ALSA=y
 BR2_PACKAGE_BATOCERA_RPI_ANY=y
 BR2_PACKAGE_LIBDRM=y
