--- a/configs/batocera-aarch32-subsystem_defconfig
+++ b/configs/batocera-aarch32-subsystem_defconfig
@@ -32,7 +32,7 @@ BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_15=y
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,raspberrypi,linux,cad0c67b64bb9de6bc970c0a7afbccabec0fcf9d)/cad0c67b64bb9de6bc970c0a7afbccabec0fcf9d.tar.gz"
-BR2_LINUX_KERNEL_DEFCONFIG="bcmrpi3"
+BR2_LINUX_KERNEL_DEFCONFIG="bcm2711"
 BR2_LINUX_KERNEL_PATCH="$(BR2_EXTERNAL_BATOCERA_PATH)/board/batocera/raspberrypi/linux_patches"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_BATOCERA_PATH)/board/batocera/raspberrypi/linux-defconfig-fragment.config"
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
@@ -58,7 +58,7 @@ BR2_PACKAGE_BATOCERA_SYSTEM=n
 BR2_PACKAGE_BATOCERA_RPI_MESA3D=y
 BR2_PACKAGE_BATOCERA_WAYLAND=y
 BR2_PACKAGE_MESA3D_VULKAN_DRIVER_BROADCOM=y
-#BR2_PACKAGE_BATOCERA_VULKAN=y
+BR2_PACKAGE_BATOCERA_VULKAN=y
 BR2_PACKAGE_LIBOGG=y
 BR2_PACKAGE_LIBVORBIS=y
 BR2_PACKAGE_BATOCERA_SDL2=y
