--- a/package/batocera/utils/pacman/Config.in
+++ b/package/batocera/utils/pacman/Config.in
@@ -6,6 +6,7 @@ config BR2_PACKAGE_PACMAN
 	select BR2_PACKAGE_LIBARCHIVE_BSDCAT
 	select BR2_PACKAGE_OPENSSL
 	select BR2_PACKAGE_LIBGPGME
+	select BR2_PACKAGE_GNUPG
 	select BR2_PACKAGE_GNUPG_AES
 	select BR2_PACKAGE_GNUPG_RSA
 	select BR2_PACKAGE_GNUPG_GPGV
