remove non ascii characters

--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -7686,9 +7686,9 @@ awgl:
             description: Select game language.
             choices:
                 "English":        us
-                "Français":       fr
+                "Francais":       fr
                 "Deutsch":        de
-                "Español":        es
+                "Espanol":        es
                 "Italiano":       it
         awgl_render:
             group: ADVANCED OPTIONS
