--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -651,6 +651,9 @@ tyrquake:
 uzebox:
   emulator: libretro
   core:     uzem
+vaporspec:
+  emulator: libretro
+  core:     vaporspec
 vanillara:
   emulator: vanillara
   core:     vanillara
