--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1169,6 +1169,9 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 
 	# Arduboy
 	select BR2_PACKAGE_LIBRETRO_ARDUOUS             # ALL
+
+	# Virtual Game Platform
+	select BR2_PACKAGE_LIBRETRO_VAPORSPEC           # ALL
 	
 	# Blues Brothers / Prehistorik 2
 	select BR2_PACKAGE_BLUES			            # ALL
