--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1,5 +1,4 @@
 
-
 ##### define variables to use in this file
 if BR2_PACKAGE_BATOCERA_RPI_VCORE || BR2_PACKAGE_BATOCERA_RPI_MESA3D
 	config BR2_PACKAGE_BATOCERA_RPI_ANY
@@ -95,8 +94,8 @@ config BR2_PACKAGE_BATOCERA_VULKAN
 	select BR2_PACKAGE_VULKAN_TOOLS
 
 	# Vulkan shaders for RetroArch
-	select BR2_PACKAGE_SLANG_SHADERS 					if BR2_PACKAGE_RETROARCH
-	select BR2_PACKAGE_HSM_SHADERS 						if BR2_PACKAGE_RETROARCH
+	select BR2_PACKAGE_SLANG_SHADERS if BR2_PACKAGE_RETROARCH
+	select BR2_PACKAGE_HSM_SHADERS if BR2_PACKAGE_RETROARCH
 
 	# Vulkan mesa drivers
 	select BR2_PACKAGE_MESA3D_VULKAN_DRIVER_INTEL       if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
@@ -226,7 +225,7 @@ config BR2_PACKAGE_BATOCERA_SYSTEM
 	select BR2_PACKAGE_ROSHAMBO_CASE        if BR2_PACKAGE_BATOCERA_TARGET_RK3399 # roshambo case
 	select BR2_PACKAGE_RPIGPIOSWITCH        if BR2_PACKAGE_BATOCERA_RPI_ANY # gpio switchs
 	select BR2_PACKAGE_RETROGAME            if BR2_PACKAGE_BATOCERA_RPI_ANY # gpio pads
-	select BR2_PACKAGE_DESKPIPRO_CASE		if BR2_PACKAGE_BATOCERA_TARGET_RPI4 # deskpi pro case rpi4 only
+	select BR2_PACKAGE_DESKPIPRO_CASE       if BR2_PACKAGE_BATOCERA_TARGET_RPI4 # deskpi pro case rpi4 only
 
 	# irq balancing
 	select BR2_PACKAGE_IRQBALANCE
@@ -361,7 +360,6 @@ config BR2_TARGET_BATOCERA_IMAGES_DEFINITIONS
 	default "x86"                                                   if BR2_PACKAGE_BATOCERA_TARGET_X86
 	default "x86_64"                                                if BR2_PACKAGE_BATOCERA_TARGET_X86_64
 
-default "rockchip/rk3326/rk3326 rockchip/rk3326/gameforce" if BR2_PACKAGE_BATOCERA_TARGET_RK3326
 choice
 	prompt "batocera.linux target"
 	default BR2_PACKAGE_BATOCERA_TARGET_RPI2
@@ -531,7 +529,7 @@ config BR2_PACKAGE_BATOCERA_HOMEBREW_SYSTEMS
 	select BR2_PACKAGE_LIBRETRO_LUTRO   if !BR2_PACKAGE_BATOCERA_TARGET_CHA
 
 	# PyGAME
-	#select BR2_PACKAGE_BATOCERA_PYGAME  if !BR2_PACKAGE_BATOCERA_TARGET_CHA
+	select BR2_PACKAGE_BATOCERA_PYGAME if !BR2_PACKAGE_BATOCERA_TARGET_CHA
 
 	# RPG engine : Solarus
 	select BR2_PACKAGE_LUAJIT           if !BR2_aarch64 # for performance
@@ -616,12 +614,6 @@ config BR2_PACKAGE_BATOCERA_ARCADE_SYSTEMS
 
 	# Mainline MAME
 	select BR2_PACKAGE_MAME     if BR2_PACKAGE_BATOCERA_TARGET_X86_64 || BR2_PACKAGE_BATOCERA_TARGET_RPI4
-
-	#MESS
-    #select BR2_PACKAGE_LIBRETRO_MESS                if  BR2_PACKAGE_BATOCERA_TARGET_X86_64	|| BR2_PACKAGE_BATOCERA_TARGET_RPI4
-
-	#RAINE
-    #select BR2_PACKAGE_RAINE                        if  BR2_PACKAGE_BATOCERA_TARGET_X86_64	|| BR2_PACKAGE_BATOCERA_TARGET_RPI4
 
 	help
 		Arcade cores/emulators
@@ -988,8 +980,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
                                                         !BR2_PACKAGE_BATOCERA_TARGET_RPIZERO2   && \
                                                         !BR2_PACKAGE_BATOCERA_TARGET_RPI2       && \
                                                         !BR2_PACKAGE_BATOCERA_TARGET_CHA        && \
-                                                        !BR2_PACKAGE_BATOCERA_TARGET_RK3326     && \
-                                                        !BR2_PACKAGE_BATOCERA_TARGET_RPI3
+                                                        !BR2_PACKAGE_BATOCERA_TARGET_RK3326
 
 	select BR2_PACKAGE_LIBRETRO_SWANSTATION         if  !BR2_PACKAGE_BATOCERA_TARGET_X86	    && \
 	                                                    !BR2_PACKAGE_BATOCERA_TARGET_CHA        && \
