--- a/package/batocera/ports/prototype/Config.in
+++ b/package/batocera/ports/prototype/Config.in
@@ -3,6 +3,8 @@ config BR2_PACKAGE_PROTOTYPE
 	depends on BR2_PACKAGE_SDL2
 	depends on BR2_PACKAGE_SDL2_MIXER
 	depends on BR2_PACKAGE_SDL2_IMAGE
+	depends on BR2_PACKAGE_GL4ES
+	depends on BR2_PACKAGE_GLU
 
 	depends on BR2_INSTALL_LIBSTDCPP
 	help
