allow gl4es on non xorg builds

--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -7743,6 +7743,7 @@ awgl:
             choices:
                 "Original":       original
                 "Software":       software
+                "OpenGL":         gl   
         awgl_fullscreen:
             group: ADVANCED OPTIONS
             prompt:      FULLSCREEN MODE
