--- a/package/batocera/ports/stuntcar/Config.in
+++ b/package/batocera/ports/stuntcar/Config.in
@@ -4,8 +4,8 @@ config BR2_PACKAGE_STUNTCAR
 	depends on BR2_PACKAGE_SDL2_MIXER
 	depends on BR2_PACKAGE_SDL2_TTF
 	depends on BR2_PACKAGE_OPENAL
-	depends on BR2_PACKAGE_GL4ES
-	depends on BR2_PACKAGE_GLU
+	select BR2_PACKAGE_GL4ES if !BR2_PACKAGE_BATOCERA_XORG
+	select BR2_PACKAGE_GLU   if !BR2_PACKAGE_BATOCERA_XORG
 	depends on BR2_INSTALL_LIBSTDCPP
 	help
 	 This is a port of the old Stunt Car Racer from the AtariST/Amiga time.
