--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -3822,9 +3822,10 @@ libretro:
                         prompt:      PINBALL MAPPING MODE
                         description: Use to play pinball games with correct mapping.
                         choices:
-                            "Off":      disabled
-                            "Modern":   modern
-                            "Classic":  classic
+                            "Off":                  disabled
+                            "Modern":               modern
+                            "Modern Alternative":   modern_alt
+                            "Classic":              classic
             amigacd32:
                 cfeatures:
                     puae_cd_startup_delayed_insert:
