--- a/Config.in
+++ b/Config.in
@@ -133,6 +133,7 @@ menu "Ports"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/devilutionx/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/doom/gzdoom/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/doom/lzdoom/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/doom/raze/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/doom/zmusic/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/ecwolf/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/eduke32/Config.in"
