--- a/Config.in
+++ b/Config.in
@@ -150,6 +150,7 @@ menu "Ports"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/openjk/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/openlara/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/prototype/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake/quakespasm/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake/quake3/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake/xatrix/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake/yquake2/Config.in"
