--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -814,7 +814,7 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 	select BR2_PACKAGE_YQUAKE2_REFVK   			if BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL && BR2_PACKAGE_YQUAKE2
 	select BR2_PACKAGE_YROGUE         			if BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL && BR2_PACKAGE_YQUAKE2
 	select BR2_PACKAGE_XATRIX         			if BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL && BR2_PACKAGE_YQUAKE2
-
+	select BR2_PACKAGE_QUAKESPASM         		if BR2_PACKAGE_BATOCERA_TARGET_X86_64 || BR2_PACKAGE_BATOCERA_RPI4_WITH_XORG 
 	select BR2_PACKAGE_QUAKE3         			if BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
 	select BR2_PACKAGE_RTCW         			if BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
