add dhewm3 (doom3)

--- a/Config.in
+++ b/Config.in
@@ -131,6 +131,7 @@ menu "Ports"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/cgenius/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/corsixth/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/devilutionx/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/doom/doom3/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/doom/gzdoom/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/doom/lzdoom/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/doom/raze/Config.in"
