--- a/package/batocera/emulators/jdk/jdk-rpi4/Config.in
+++ b/package/batocera/emulators/jdk/jdk-rpi4/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_JDK_RPI4
     bool "jdk-rpi4"
+    select BR2_PACKAGE_XLIB_LIBXTST
     help
       openJDK precompiled for RPI4
 
