--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -4977,7 +4977,7 @@ amiberry:
             choices:
                 "ON":                          true
                 "OFF":                         false
-        amiberry_auto_height:
+        amiberry_auto_crop:
             prompt:      AUTO HEIGHT
             description: Resize automatically screen height.
             choices:
