--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -3690,6 +3690,7 @@ libretro:
                 prompt:      VIDEO RESOLUTION
                 description: Manually define which resolution to use.&#x0a;Auto defaults to High and switches to Super-High when needed.
                 choices:
+                    "Automatic":        automatic
                     "Low 360p":         lores
                     "High 720p":        hires
                     "Super-high 1440p": superhires
