--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -823,12 +823,10 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 
     #Java Emulators
 	select BR2_PACKAGE_LIBRETRO_FREEJ2ME	    if BR2_PACKAGE_BATOCERA_TARGET_X86_64  || \
-												   BR2_PACKAGE_BATOCERA_TARGET_RPI4    || \
-												   BR2_PACKAGE_BATOCERA_TARGET_RPI3
+												   BR2_PACKAGE_BATOCERA_TARGET_RPI4
 
-	select BR2_PACKAGE_JDK_X86_64	  			if BR2_PACKAGE_BATOCERA_TARGET_X86_64 && BR2_PACKAGE_LIBRETRO_FREEJ2ME
-	select BR2_PACKAGE_JDK_RPI4		  			if BR2_PACKAGE_BATOCERA_TARGET_RPI4 && BR2_PACKAGE_LIBRETRO_FREEJ2ME
-	select BR2_PACKAGE_JDK_RPI3		  			if BR2_PACKAGE_BATOCERA_TARGET_RPI3 && BR2_PACKAGE_LIBRETRO_FREEJ2ME
+	select BR2_PACKAGE_JDK_X86_64	  			if BR2_PACKAGE_OPENJDK
+
 
 	select BR2_PACKAGE_LIBRETRO_SQUIRRELJME	    if BR2_PACKAGE_BATOCERA_TARGET_X86_64  || \
 												   BR2_PACKAGE_BATOCERA_TARGET_RPI4    || \
