--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-rpi4.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-rpi4.yml
@@ -5,6 +5,9 @@ default:
     retroarch.video_max_swapchain_images: 3
     retroarch.video_adaptive_vsync: true
     hud_support: true
+    menu_scale_factor: 0.800000
+    menu_widget_scale_auto: false
+    menu_widget_scale_factor: 0.800000
 
 nds:
   emulator: drastic
