--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -825,7 +825,7 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 	select BR2_PACKAGE_LIBRETRO_FREEJ2ME	    if BR2_PACKAGE_BATOCERA_TARGET_X86_64  || \
 												   BR2_PACKAGE_BATOCERA_TARGET_RPI4
 
-	select BR2_PACKAGE_JDK_X86_64	  			if BR2_PACKAGE_OPENJDK
+	select BR2_PACKAGE_OPENJDK		  			if BR2_PACKAGE_LIBRETRO_FREEJ2ME
 
 
 	select BR2_PACKAGE_LIBRETRO_SQUIRRELJME	    if BR2_PACKAGE_BATOCERA_TARGET_X86_64  || \
