--- a/package/batocera/emulationstation/batocera-emulationstation/controllers/es_input.cfg
+++ b/package/batocera/emulationstation/batocera-emulationstation/controllers/es_input.cfg
@@ -2714,6 +2714,21 @@
 		<input name="x" type="button" id="2" value="1" code="290" />
 		<input name="y" type="button" id="3" value="1" code="291" />
 	</inputConfig>
+	<inputConfig type="joystick" deviceName=" Retro Games LTD   THEGamepad " deviceGUID="03000000591c00002600000010010000">
+		<input name="a" type="button" id="1" value="1" code="289" />
+		<input name="b" type="button" id="2" value="1" code="290" />
+		<input name="down" type="axis" id="1" value="1" code="1" />
+		<input name="hotkey" type="button" id="6" value="1" code="294" />
+		<input name="left" type="axis" id="0" value="-1" code="0" />
+		<input name="pagedown" type="button" id="5" value="1" code="293" />
+		<input name="pageup" type="button" id="4" value="1" code="292" />
+		<input name="right" type="axis" id="0" value="1" code="0" />
+		<input name="select" type="button" id="6" value="1" code="294" />
+		<input name="start" type="button" id="7" value="1" code="295" />
+		<input name="up" type="axis" id="1" value="-1" code="1" />
+		<input name="x" type="button" id="3" value="1" code="291" />
+		<input name="y" type="button" id="0" value="1" code="288" />
+	</inputConfig>
 	<inputConfig type="joystick" deviceName="6B controller" deviceGUID="03000000a30c00002400000011010000">
 		<input name="pagedown" type="button" id="7" value="1" code="293" />
 		<input name="pageup" type="button" id="6" value="1" code="292" />
