--- a/package/batocera/emulationstation/batocera-es-system/es_systems.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_systems.yml
@@ -163,7 +163,7 @@ amigacd32:
     fsuae:
       CD32:   { requireAnyOf: [BR2_PACKAGE_FSUAE]         }
     amiberry:
-      CD32:   { requireAnyOf: [BR2_PACKAGE_AMIBERRY], incompatible_extensions: [chd] }
+      CD32:   { requireAnyOf: [BR2_PACKAGE_AMIBERRY]      }
     libretro:
       puae:   { requireAnyOf: [BR2_PACKAGE_LIBRETRO_PUAE] }
 
@@ -3156,9 +3156,18 @@ amigademo:
   group:      amiga
   emulators:
     fsuae:
-      CD32:   { requireAnyOf: [BR2_PACKAGE_FSUAE]         }
+      A500:   { requireAnyOf: [BR2_PACKAGE_FSUAE]         }
+      A500+:  { requireAnyOf: [BR2_PACKAGE_FSUAE]         }
+      A600:   { requireAnyOf: [BR2_PACKAGE_FSUAE]         }
+      A1000:  { requireAnyOf: [BR2_PACKAGE_FSUAE]         }
+      A3000:  { requireAnyOf: [BR2_PACKAGE_FSUAE]         }
+      A1200:  { requireAnyOf: [BR2_PACKAGE_FSUAE]         }
+      A4000:  { requireAnyOf: [BR2_PACKAGE_FSUAE]         }
     amiberry:
-      CD32:   { requireAnyOf: [BR2_PACKAGE_AMIBERRY], incompatible_extensions: [chd] }
+      A500:   { requireAnyOf: [BR2_PACKAGE_AMIBERRY], incompatible_extensions: [m3u] }
+      A500+:  { requireAnyOf: [BR2_PACKAGE_AMIBERRY], incompatible_extensions: [m3u] }
+      A1200:  { requireAnyOf: [BR2_PACKAGE_AMIBERRY], incompatible_extensions: [m3u] }
+      A4000:  { requireAnyOf: [BR2_PACKAGE_AMIBERRY], incompatible_extensions: [m3u] }
     libretro:
       puae:   { requireAnyOf: [BR2_PACKAGE_LIBRETRO_PUAE] }
 
